Bug: 643537 Reviewer: Jay Wootton Comment: In the "what's new" control, if the title is really long it overlaps the refresh controls.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -90,6 +90,7 @@
 	font-size: .75em;
 	margin-left: 1em;
 	padding: 5px;
+	white-space: nowrap;
 }
 
 .activityStreamCtrlHeaderRefresh
